--- a/Day11/instagram-clone/composer.json
+++ b/Day11/instagram-clone/composer.json
@@ -13,8 +13,10 @@
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.4",
+        "laravel/telescope": "2.1.7",
         "laravel/tinker": "^1.0",
-        "league/flysystem-aws-s3-v3": "^1.0"
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "pusher/pusher-php-server": "~4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4",
